# internal/dto/class.go
@@ -1,0 +1,7 @@
+package dto
+
+import "backend/internal/domains"
+
+type ClassDTO struct {
+	Data domains.Class `json:"data"`
+} // @name ClassDTO
